--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,26 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
+<header>
+<h1>Antoinette Salom</h1>
+<h2>Engineering Program Coordinator/ Curious tech nerd/ Lover of food</h2>
+</header>
 
-  Welcome to the HTML Portfolio Project
+<div class= "tagline">
+</h3>So who is Antoinette?
+I'm an Engineering Program Coordinator in the Silicon Valley.</h3>
+
+<div class= "tagline">
+  <h3>My Skills</h3>
+<p> I am currently learning front-end web development!!</p>
+<ul>HTML</ul>
+<ul>CSS</ul>
+<ul>SQL</ul>
+
+<div class = "contact">
+  <h3>Contact Me!</h3>
+  <a href= "https://www.linkedin.com/in/antoinettesalom/"> LinkedIn</a>
+
 
 </body>
 </html>
