--- a/src/index.html
+++ b/src/index.html
@@ -13,20 +13,22 @@
 </header>
 
 <div class= "tagline">
-</h3>So who is Antoinette?
-I'm an Engineering Program Coordinator in the Silicon Valley.</h3>
+</h3>So who is Antoinette?</h3>
+</p>I'm an Engineering Program Coordinator in the Silicon Valley.</p>
+</div>
 
-<div class= "tagline">
+<div class= "skills">
   <h3>My Skills</h3>
 <p> I am currently learning front-end web development!!</p>
 <ul>HTML</ul>
 <ul>CSS</ul>
 <ul>SQL</ul>
+</div>
 
 <div class = "contact">
   <h3>Contact Me!</h3>
   <a href= "https://www.linkedin.com/in/antoinettesalom/"> LinkedIn</a>
-
+</div>
 
 </body>
 </html>
